adjust some colors and fix contrast

--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -1,9 +1,9 @@
 // Colours partial
 
 // Text colours
-$txt-primary: rgba(28, 54, 83, 0.6);
+$txt-primary: rgb(13, 23, 36);
 // body font
-$txt-secondary: #3d4351;
+$txt-secondary: #2a2e37;
 // heading font
 $txt-light: #fff;
 // header/hero
