--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -896,6 +896,7 @@ RSVP form
         -webkit-border-radius: 6px;
         border-radius: 6px;
         border: none;
+        background-color: white;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
